--- a/CPlusPlus/QuickStart/Config/DefaultEngine.ini
+++ b/CPlusPlus/QuickStart/Config/DefaultEngine.ini
@@ -8,6 +8,10 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
 r.ForwardShading=False
+r.PostProcessing.PropagateAlpha=False
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/QuickStart.QuickStart
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -49,7 +53,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/QuickStart.QuickStart
-
