--- a/CPlusPlus/QuickStart/Config/DefaultGame.ini
+++ b/CPlusPlus/QuickStart/Config/DefaultGame.ini
@@ -1,2 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=6D078AC14BE4A12C712E5B93F9D34604
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
