--- a/BluePrint/PostSnowEffect/Config/DefaultEngine.ini
+++ b/BluePrint/PostSnowEffect/Config/DefaultEngine.ini
@@ -25,6 +25,10 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/Engine.RendererSettings]
+r.ForwardShading=False
+r.DBuffer=True
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -65,4 +69,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
 
