add thread test

--- a/UE4/CPlusPlus/MultiThread/MultiThread.uproject
+++ b/UE4/CPlusPlus/MultiThread/MultiThread.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "MultiThread",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
